# ccs-ai-examine

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  combine_data.py  dummy_data.py  dvc.yaml  env.example  install_drivers.sh  params.yaml  process_data.py  pyproject.toml  requirements.txt  run_pipeline.py  suppliers.csv  utils.py
.github/workflows/: ci.yml
EXAMINE.egg-info/: PKG-INFO  SOURCES.txt
benchmark_data/: ccs_combined_buyer_supplier_benchmark.csv
dummy_data/: dummy_combined.csv  dummy_contracts.csv  dummy_mi.csv  dummy_reg_key_pairs.csv
evaluation/: __init__.py  evaluate_buyer_matching_mlflow.py  mock_langchain_model.py  run_descriptions.yaml
prompts/: buyer_match_v3.txt
scripts/: add_CustomerGroup.py  combine_data.py  download_data.py  generate_dummy_data.py  get_data.py  optimised_combined_data.py  summarise_data.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_back_end.py  test_distractors.py  test_match_string_via_api.py  test_mock_and_utils.py
